# Gmail

./: .gitignore  README.md  SKILL.md  get_refresh_token.py  manifest.json  test_connection.py  validate_local.py
docs/: index.html
lib/: pyproject.toml
lib/ruvic_gmail_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
