[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-gmail-connector"
version = "1.0.0"
description = "Conector Ruvic para Gmail (Google Workspace): lectura y envío de correos"
requires-python = ">=3.10"
dependencies = [
    "google-auth>=2.29,<3.0",
    "google-api-python-client>=2.130,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_gmail_connector*"]
